# yolovet

./: .gitignore  Cargo.toml  README.md  README_FIRST_UPLOAD.md  build.rs  make_combo_grid.py
embedded_tools_src/: cpu_train_runner.py  onnx_export_runner.py
src/: main.rs  onnx_assist.rs
