[package]
name = "yolo_trainer_gui"
version = "0.1.0"
edition = "2021"
description = "YOLO annotation and training launcher (Ultralytics)"

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.29"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
rfd = "0.15"
ureq = "2.12"

[build-dependencies]
winres = "0.1"
